swf-debug-adapter: allow env field in launch.json to set a map of environment variables (closes #20)